# reigen

./: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  approach.txt  gen_bench_data.py  gen_smoke.py
benches/: convert.rs  merge.rs
src/: cmd_convert.rs  cmd_export.rs  cmd_filter.rs  cmd_vcfimport.rs  filter.rs  format.rs  hash.rs  lib.rs  main.rs  pipeline.rs  strand.rs  transpose.rs  vcf.rs
src/geno/: ancestrymap.rs  codec.rs  eigenstrat.rs  mod.rs  packed_am.rs  packed_ped.rs  tgeno.rs
src/import/: ancestry.rs  detect.rs  ftdna.rs  livingdna.rs  mod.rs  myheritage.rs  reconcile.rs  twenty_three.rs  vendor.rs
src/merge/: key.rs  mod.rs  plan.rs  stream.rs
src/meta/: bim.rs  fam.rs  ind.rs  mod.rs  snp.rs
src/stats/: ibs.rs  mod.rs  per_sample.rs  per_snp.rs
