[package]
name = "reigen"
version = "0.1.1"
edition = "2021"
description = "Population genomics toolkit — format conversion, DTC import, dataset merging (reimplementation of EIGENSOFT convertf + mergeit)."
license = "GPL-3.0"

[[bin]]
name = "reigen"
path = "src/main.rs"

[dependencies]
# Versions pinned to what Rust 1.75 supports. Bump after we confirm a newer
# toolchain on the target machine.
anyhow = "=1.0.86"
thiserror = "=1.0.63"
clap = { version = "=4.4.18", features = ["derive"] }
memmap2 = "=0.9.4"
memchr = "=2.7.4"
rayon = "=1.10.0"
ahash = "=0.8.11"
hashbrown = "=0.14.5"
bytemuck = "=1.16.3"
log = "=0.4.22"
env_logger = "=0.11.5"
flate2 = "=1.0.35"
zip = "=0.6.6"
tempfile = "=3.12.0"

[dev-dependencies]
criterion = { version = "=0.5.1", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "convert"
harness = false

[[bench]]
name = "merge"
harness = false
